Refactored entire codebase
*Used IntelliJ suggestions to get rid of 99% of the warnings we were getting.
*Cleaned up unused/unnecessary sections of code
*Retested functionality and everything still works fine after refactor.