@@ -10,7 +10,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 
 public class Recommendations_Model {
-    public ArrayList getReccomendations(String username) throws IOException {
+
+    public ArrayList<Movie_Model> getRecommendations(String username) throws IOException {
 
         ArrayList<Movie_Model> Movies = new ArrayList<>();
         ArrayList<Movie_Model> returnMovies = new ArrayList<>();
@@ -18,7 +19,7 @@ public class Recommendations_Model {
 
         Path path = Paths.get("SampleMovieFile.json");
         Charset charset = StandardCharsets.UTF_8;
-        String content = new String(Files.readAllBytes(path), charset);
+        String content = Files.readString(path, charset);
         Gson gson = new Gson();
         Movie_Model[] list;
         list = gson.fromJson(content,Movie_Model[].class);
@@ -27,7 +28,7 @@ public class Recommendations_Model {
 
         Path path2 = Paths.get("UserData.json");
         Charset charset2 = StandardCharsets.UTF_8;
-        String content2 = new String(Files.readAllBytes(path2), charset2);
+        String content2 = Files.readString(path2, charset2);
         Gson gson2 = new Gson();
         User_Model[] list2;
         list2 = gson2.fromJson(content2, User_Model[].class);
@@ -47,18 +48,18 @@ public class Recommendations_Model {
 
         // put movies in an arraylist
 
-        for(int i = 0; i < movieNames.size();i++){
-            for(Movie_Model movie:arrayList){
-                if(movie.getTitle().equals(movieNames.get(i))){
+        for (String movieName : movieNames) {
+            for (Movie_Model movie : arrayList) {
+                if (movie.getTitle().equals(movieName)) {
                     Movies.add(movie);
                 }
             }
         }
 
         // get movies with the same genre
-        for(int k = 0; k < Movies.size(); k++){
-            for(Movie_Model movie : arrayList){
-                if(Movies.get(k).getGenre().equals(movie.getGenre())){
+        for (Movie_Model movieModel : Movies) {
+            for (Movie_Model movie : arrayList) {
+                if (movieModel.getGenre().equals(movie.getGenre())) {
                     returnMovies.add(movie);
                 }
             }
